// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativePromo component should not render a PRO only promo on a regular account 1`] = `null`;

exports[`NativePromo component should properly render a PRO only promo for PRO users 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "elevation": 3,
      "marginBottom": 8,
      "marginHorizontal": 8,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
            "marginLeft": 8,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderColor": "#D45D00",
              "borderWidth": 2,
              "justifyContent": "center",
              "paddingLeft": 2,
              "paddingRight": 1,
            }
          }
        >
          <Text
            color="accent"
            family="archer"
            lineHeight={false}
            size="small"
            weight="bold"
          >
            PRO
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#EBEDEF",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="accent"
        syle={undefined}
        weight="bold"
      >
        Coupon Code:
         
      </Text>
      <TouchableOpacity
        hitSlop={
          Object {
            "bottom": 14,
            "left": 14,
            "right": 14,
            "top": 14,
          }
        }
        onPress={[Function]}
        trackAction="build:app:nativepromo:coupontap"
      />
    </View>
  </View>
</View>
`;

exports[`NativePromo component should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "elevation": 3,
      "marginBottom": 8,
      "marginHorizontal": 8,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#EBEDEF",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Text
        color="accent"
        syle={undefined}
        weight="bold"
      >
        Coupon Code:
         
      </Text>
      <TouchableOpacity
        hitSlop={
          Object {
            "bottom": 14,
            "left": 14,
            "right": 14,
            "top": 14,
          }
        }
        onPress={[Function]}
        trackAction="build:app:nativepromo:coupontap"
      />
    </View>
  </View>
</View>
`;

exports[`NativePromo component should render correctly without a coupon 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "elevation": 3,
      "marginBottom": 8,
      "marginHorizontal": 8,
      "shadowColor": "black",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "borderTopColor": "#EBEDEF",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <Text>
      No Coupon Necessary
    </Text>
  </View>
</View>
`;
